test/mutation_analysis/s0152_maximum_product_subarray/hafis/ablation_o3_full/mutants/17/result.txt
./test/mutation_analysis/s0152_maximum_product_subarray/hafis/ablation_o3_full/mutants/17/Solution.java:32: error: unreachable statement
        return ans;
        ^
1 error
